--- a/servers/statistics-server/pyproject.toml
+++ b/servers/statistics-server/pyproject.toml
@@ -7,6 +7,8 @@ dependencies = [
     "black>=25.9.0",
     "mcp>=1.19.0",
     "pandas>=2.3.3",
+    "scikit-learn>=1.7.2",
+    "scipy>=1.16.3",
 ]
 
 [dependency-groups]
